After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708677 - incorrect object path 'deskop' used in gio/gdbusobjectmanagerclient.c
incorrect object path 'deskop' used in gio/gdbusobjectmanagerclient.c
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2013-09-24 12:14 UTC by James Strandboge
Modified: 2013-09-24 13:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gio: Fix typo in the /org/freedesktop/DBus path (1.52 KB, patch)
2013-09-24 12:22 UTC, Emmanuele Bassi (:ebassi)
committed Details | Review

Description James Strandboge 2013-09-24 12:14:26 UTC
From the Ubuntu bug:
'In profiling applications, I received the following DBus denial:
Sep 18 10:31:17 localhost dbus[16510]: apparmor="DENIED" operation="dbus_method_call" bus="session" name="org.freedesktop.DBus" path="/org/freedeskop/DBus" interface="org.freedesktop.DBus" member="AddMatch" mask="send" pid=6756 profile="net.launchpad.ubuntu-security.ubuntu-sdk-1310-api-demos_ubuntu-sdk-1310-api-demos_0.2" peer_profile="unconfined"

Notice:
path="/org/freedeskop/DBus"

This should be:
path="/org/freedesktop/DBus"'

Patch is in Launchpad: https://launchpadlibrarian.net/150626042/fix-gdbusobjectmanagerclient-object-path.patch
Comment 1 Emmanuele Bassi (:ebassi) 2013-09-24 12:22:53 UTC
Created attachment 255620 [details] [review]
gio: Fix typo in the /org/freedesktop/DBus path
Comment 2 Allison Karlitskaya (desrt) 2013-09-24 13:29:03 UTC
Attachment 255620 [details] pushed as 74314de - gio: Fix typo in the /org/freedesktop/DBus path