gio: Fix typo in the /org/freedesktop/DBus path

https://bugzilla.gnome.org/show_bug.cgi?id=708677